# dunno-backend

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_connection.py
.claude/: settings.json
database/: supabase_client.py
extension/: crew.py  router.py
jobs/: agents.py  crew.py  cron.py  router.py  schemas.py  scoring.py  storage.py  tasks.py  tools.py
meshtheorem-frontend/fashion-frontend/: app.json  package-lock.json  package.json
meshtheorem-frontend/fashion-frontend/app/: _layout.tsx  otp.tsx  phone.tsx
meshtheorem-frontend/fashion-frontend/components/: OnboardingHeader.tsx
meshtheorem-frontend/fashion-frontend/constants/: api.ts
meshtheorem-frontend/fashion-frontend/lib/: token.ts
models/: auth.py
projects/dunno_tracker/backend/: .env.example  CLAUDE.md  requirements.txt
referral/: crew.py  generate.py  router.py
routers/: auth.py  emails.py  extension.py  feedback.py  links.py  portfolio.py  profile.py  resume.py
scripts/: backfill_embeddings.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_add_profile_status.sql  002_portfolio_template_and_photo.sql  003_jobs_module.sql  004_job_runs.sql  005_job_preferences.sql  006_job_experience_and_embeddings.sql  007_match_jobs_rpc.sql  008_portfolio_general_resume_cover.sql  010_match_jobs_exp_floor.sql  011_feedback.sql  012_email_log.sql
tests/: conftest.py  test_auth.py  test_jobs.py  test_links.py  test_portfolio.py  test_resume.py  test_resume_general.py
(+56 files in other folders)
